fix for scholarships overflow

--- a/docroot/sites/admissions.uiowa.edu/modules/admissions_core/sass/scholarship-teaser.scss
+++ b/docroot/sites/admissions.uiowa.edu/modules/admissions_core/sass/scholarship-teaser.scss
@@ -1,3 +1,6 @@
+.accordion summary {
+  text-wrap: auto;
+}
 .accordion__button__teaser {
   opacity: 1;
   height: auto;
